--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,43 @@ img {
   display: block;
   max-width: 100%;
 }
+
+
+.timer {
+display: flex;
+box-sizing: border-box;
+margin-top: 10px;
+  /* flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center; */
+  font-family: Arial, sans-serif;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start;
+  align-items: center; */
+  text-align: center;
+  margin: 0px 10px;
+}
+
+.field:first-child {
+  margin-left: 0;
+}
+
+.field:last-child {
+  margin-right: 0;
+}
+
+
+.value {
+  /* margin-bottom: 0px; */
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.label {
+  font-size: 12px;
+  color: #666;
+}
